--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: arn:aws:iam::982534382107:role/arn:aws:iam::982534382107:role/ses-role
+          role-to-assume: arn:aws:iam::982534382107:role/ses-role
           aws-region: us-east-1
 
       - name: Install Minikube
@@ -37,13 +37,13 @@ jobs:
 
       - name: Get Docker Hub credentials from AWS Secrets Manager
         id: dockerhub-secret
-        uses: aws-actions/aws-secretsmanager-get-secret@v1
+        uses: aws-actions/aws-secretsmanager-get-secret@v2
         with:
           secret-id: dockerhub-credentials
           parse-json-secrets: true
 
       - name: Login to Docker Hub
-        run: docker login -u ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_USERNAME }} -p ${{ steps.dockerhub-secret.outputs.DOCKERHUB_TOKEN }}
+        run: docker login -u ${{ steps.dockerhub_secret.outputs.DOCKERHUB_USERNAME }} -p ${{ steps.dockerhub-secret.outputs.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker image
         id: docker_build
@@ -66,7 +66,7 @@ jobs:
         run: terraform init
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve -var="github_owner=kiranrajeev1" -var="https://github.com/kiranrajeev1/ArcoCD-Istio-SES-SM-Terraform-cicd.git"
+        run: terraform apply -auto-approve -var="github_owner=kiranrajeev1" -var="repo_url=https://github.com/kiranrajeev1/ArcoCD-Istio-SES-SM-Terraform-cicd.git"
 
       - name: Get ArgoCD initial password
         id: argocd-password
